# beta

./: .gitignore  pyproject.toml
beta/: db.sqlite3  requirements.txt
beta/apps/menu/migrations/: 0001_initial.py  0002_food_item.py  0003_alter_food_item_price.py
beta/apps/restaurant/migrations/: 0001_initial.py
beta/apps/users/migrations/: 0001_initial.py
