[tool.poetry]
name = "alpha"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@domain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.2"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.1.0"}
rest-framework-simplejwt = "^0.0.2"
install = "^1.3.5"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
